--- a/scripts/sup_figure2/sup_figure2c_tumor_cells_Hmatrix.Rmd
+++ b/scripts/sup_figure2/sup_figure2c_tumor_cells_Hmatrix.Rmd
@@ -49,7 +49,7 @@ annot_tumor <- readRDS(params$annot_tumor)
 annot_cells <- readRDS(params$annot_cells)
 
 annot <- bind_rows(annot_tumor, annot_cells)
-annot <- annot[!is.na(annot$avail.ChIPseq), ]
+annot <- annot[annot$avail.ChIPseq, ]
 head(annot)
 
 
