NMF signature enrichment EMT

--- a/scripts/figure2/figure2h_SEtargetExprs_mouseE12.5.Rmd
+++ b/scripts/figure2/figure2h_SEtargetExprs_mouseE12.5.Rmd
@@ -208,5 +208,8 @@ man_hr <- projection_plot("MNA-HR")
 
 projection_gg <- mycn + mes + man_lr + man_hr + plot_layout(ncol = 2)
 projection_gg
+
+ggsave(params$figure, projection_gg, width = 10, height = 10)
+
 ```
 
