--- a/scripts/figure4/figure4_IGV_plot.Rmd
+++ b/scripts/figure4/figure4_IGV_plot.Rmd
@@ -260,7 +260,7 @@ if (params$name == "COL1A1") {
 # ymax <- ifelse(ymax == "max", ymax, as.numeric(ymax))
 
 x <- plot_tracks_from_config(tracks_config, roi, width_window = params$width_window)
-plot(x[[1]])
+#plot(x[[1]])
 # gg_tracks <-x[[1]]
 
  
@@ -935,7 +935,7 @@ plot_tracks_from_config <- function(tracks_config, roi, width_window = 5000){
       theme(legend.position="none",
             axis.text.y = element_text(size=5))
     
-    tracks.r <- as(tracks.r, "grob")
+    #tracks.r <- as(tracks.r, "grob")
     ##––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
     ##                 Save Plot Tracks                       ##
     ##––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
@@ -946,7 +946,7 @@ plot_tracks_from_config <- function(tracks_config, roi, width_window = 5000){
     
     return(tracks.r)
     
-    
+    message(paste0("Saved: ", names(region2plot)))
     
   })
   
